copy artifact files

--- a/azure-pipelines/templates/include-archive.yml
+++ b/azure-pipelines/templates/include-archive.yml
@@ -44,6 +44,13 @@ parameters:
     - 'Microsoft.SqlTools.Migration'
 
 steps:
+- task: CopyFiles@2
+  displayName: 'Copy Build.SourcesDirectory/artifacts to sqltoolsservice/artifacts'
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)/artifacts'
+    Contents: '**'
+    TargetFolder: '$(Build.SourcesDirectory)/sqltoolsservice/artifacts'
+    Overwrite: true
 
 - ${{ each project in parameters.publishProjects }}:
   - ${{ each platform in parameters.platforms }}:
