add publishTargetFramework variable

--- a/azure-pipelines/PullRequest.yml
+++ b/azure-pipelines/PullRequest.yml
@@ -15,6 +15,8 @@ variables:
 stages:
 - stage: Build
   variables:
+  - name: publishTargetFramework
+    value: 'net8.0'
   - name: buildConfiguration
     value: 'Release'
   - name: ManagedBatchParserMajor
