--- a/azure-pipelines/templates/include-build.yml
+++ b/azure-pipelines/templates/include-build.yml
@@ -46,7 +46,7 @@ steps:
 - task: PowerShell@2
   displayName: 'Run script build.ps1'
   inputs:
-    filePath: ./build.ps1
+    filePath: ./sqltoolsservice/build.ps1
     arguments: '-target=all -mono'
 
 - task: DotNetCoreCLI@2
