--- a/Packages.props
+++ b/Packages.props
@@ -21,7 +21,7 @@
     <!-- TODO: Upgrade package and use Token Credential design -->
     <PackageReference Update="Microsoft.Data.SqlClient.AlwaysEncrypted.AzureKeyVaultProvider" Version="1.1.1" />
     <PackageReference Update="Microsoft.SqlServer.Management.SmoMetadataProvider" Version="170.18.0" />
-    <PackageReference Update="Microsoft.SqlServer.DacFx" Version="162.2.103-preview" />
+    <PackageReference Update="Microsoft.SqlServer.DacFx" Version="162.3.566" />
     <PackageReference Update="Microsoft.SqlServer.DacFx.Projects" Version="0.2.3-preview" />
     <PackageReference Update="Microsoft.Azure.Kusto.Data" Version="9.0.4" />
     <PackageReference Update="Microsoft.Azure.Kusto.Language" Version="9.0.4" />
@@ -60,7 +60,7 @@
 		packages\Microsoft.SqlTools.ManagedBatchParser\Microsoft.SqlTools.ManagedBatchParser.nuspec-->
   <ItemGroup>
     <PackageReference Update="Azure.Identity" Version="1.10.3" />
-    <PackageReference Update="Microsoft.Data.SqlClient" Version="5.1.4" />
+    <PackageReference Update="Microsoft.Data.SqlClient" Version="5.1.5" />
     <PackageReference Update="Microsoft.SqlServer.SqlManagementObjects" Version="170.18.0" />
     <PackageReference Update="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
