--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -164,7 +164,7 @@ steps:
 - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@5
   displayName: 'ESRP CodeSigning - SNK only'
   inputs:
-    ConnectedServiceName: 'ADS Pipelines'
+    ConnectedServiceName: 'ESRP Managed Identity'
     AppRegistrationClientId: 'f464e149-f00e-4d1c-9bdb-961988d6bbcc' 
     AppRegistrationTenantId: '72f988bf-86f1-41af-91ab-2d7cd011db47' 
     AuthAKVName: 'ESRP-Secrets-AKV'
@@ -196,7 +196,7 @@ steps:
 - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@5
   displayName: 'ESRP CodeSigning - sha256 only'
   inputs:
-    ConnectedServiceName: 'ADS Pipelines'
+    ConnectedServiceName: 'ESRP Managed Identity'
     AppRegistrationClientId: 'f464e149-f00e-4d1c-9bdb-961988d6bbcc' 
     AppRegistrationTenantId: '72f988bf-86f1-41af-91ab-2d7cd011db47' 
     AuthAKVName: 'ESRP-Secrets-AKV'
@@ -254,7 +254,7 @@ steps:
 - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@5
   displayName: 'ESRP SqlCore CodeSigning - sha256 only'
   inputs:
-    ConnectedServiceName: 'ADS Pipelines'
+    ConnectedServiceName: 'ESRP Managed Identity'
     AppRegistrationClientId: 'f464e149-f00e-4d1c-9bdb-961988d6bbcc' 
     AppRegistrationTenantId: '72f988bf-86f1-41af-91ab-2d7cd011db47' 
     AuthAKVName: 'ESRP-Secrets-AKV'
@@ -333,7 +333,7 @@ steps:
 - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@5
   displayName: 'ESRP Code Signing - Nuget Package'
   inputs:
-    ConnectedServiceName: 'ADS Pipelines'
+    ConnectedServiceName: 'ESRP Managed Identity'
     AppRegistrationClientId: 'f464e149-f00e-4d1c-9bdb-961988d6bbcc' 
     AppRegistrationTenantId: '72f988bf-86f1-41af-91ab-2d7cd011db47' 
     AuthAKVName: 'ESRP-Secrets-AKV'
