--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -28,14 +28,13 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v4
       
-      - name: Setup environment for smoke tests
+      - name: Creating SQL server password
         run: |
-          echo "Setting up environment for smoke tests"
           echo "PASSWORD=$(LC_ALL=C tr -dc 'A-Za-z0-9!?%=' < /dev/urandom | head -c 16)$(LC_ALL=C tr -dc '@^#' < /dev/urandom | head -c 1)" >> $GITHUB_ENV
 
       - name: Install mssql
         run: |
-          sudo cp build/mssql.init /etc/init.d/mssql-server
+          sudo cp ./mssql.init /etc/init.d/mssql-server
           sudo chmod +x /etc/init.d/mssql-server
           curl https://packages.microsoft.com/keys/microsoft.asc | sudo tee /etc/apt/trusted.gpg.d/microsoft.asc
           sudo add-apt-repository "$(wget -qO- https://packages.microsoft.com/config/ubuntu/22.04/mssql-server-2022.list)"
