--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -66,7 +66,9 @@ jobs:
           EOF
       
       - name: Setting Up Test Environment
-        run: dotnet run ./test/Microsoft.SqlTools.ServiceLayer.TestEnvConfig/Microsoft.SqlTools.ServiceLayer.TestEnvConfig.csproj './test/Microsoft.SqlTools.ServiceLayer.TestEnvConfig/SQLConnectionInstances.xml'
+        run: |
+          cd test/Microsoft.SqlTools.ServiceLayer.TestEnvConfig
+          dotnet run SQLConnectionInstances.xml
         env:
           sqlOnPrem_password: ${{ env.PASSWORD }}
         
