--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -75,4 +75,15 @@ jobs:
         run: dotnet build  './test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj'
       
       - name: Running Integration Tests
-        run: dotnet test './test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj' --no-build
+        run: dotnet test './test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj' --logger "junit;LogFilePath=./TestResults.xml" --no-build
+      
+      - name: Unit Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: 'Unit Test Report'
+          path: ./TestResults.xml
+          reporter: jest-junit
+          badge-title: 'unit-tests'
+
+      
