--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Running Integration Tests
         run: dotnet test './test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj' --logger "junit;LogFilePath=./TestResults.xml" --no-build
       
-      - name: Unit Test Report
+      - name: Integration Test Report
         uses: dorny/test-reporter@v1
         if: success() || failure()
         with:
