--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -83,7 +83,7 @@ jobs:
         with:
           name: 'Unit Test Report'
           path: ./test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/TestResults/testResults.trx
-          reporter: jest-junit
+          reporter: dotnet-trx
           badge-title: 'unit-tests'
 
       
