--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Integration Test
 on:
   schedule:
     - cron: '0 0 * * *'
@@ -67,7 +67,6 @@ jobs:
       
       - name: Setting Up Test Environment
         run: |
-          sqlOnPrem_password=${{ env.PASSWORD }}
           cd test/Microsoft.SqlTools.ServiceLayer.TestEnvConfig
           dotnet run SQLConnectionInstances.xml
         
@@ -75,8 +74,15 @@ jobs:
         run: dotnet build  './test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj'
       
       - name: Running Integration Tests
-        run: dotnet test './test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj' --logger "trx;logfilename=testResults.trx" --no-build
-      
+        run: |
+        sqlOnPrem_password=${{ env.PASSWORD }}
+        dotnet test './test/Microsoft.SqlTools.ServiceLayer.IntegrationTests/Microsoft.SqlTools.ServiceLayer.IntegrationTests.csproj' --logger "trx;logfilename=testResults.trx" --no-build
+        # We need to figure out how to set these environment variables
+        ## AzureStorageAccountKey: '$(sqltools-backup-url-tests-storageaccountkey)'
+        ## AzureStorageAccountName: '$(sqltools-backup-url-tests-storageaccountname)'
+        ## AzureBlobContainerUri: '$(sqltools-backup-url-tests-blobcontaineruri)'
+
+
       - name: Integration Test Report
         uses: dorny/test-reporter@v1
         if: success() || failure()
