--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -38,6 +38,19 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="SqlCopilotCommon">
+      <HintPath>..\..\bin\SqlCopilot\SqlCopilotCommon.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.SqlTools.Connectors.VSCode">
+      <HintPath>..\..\bin\SqlCopilot\Microsoft.SqlTools.Connectors.VSCode.dll</HintPath>
+    </Reference>
+    <Reference Include="SqlCopilotCartridges">
+      <HintPath>..\..\bin\SqlCopilot\SqlCopilotCartridges.dll</HintPath>
+    </Reference>
+    
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
@@ -62,6 +75,27 @@
     </PackageReference>
     <PackageReference Include="TextCopy" />
   </ItemGroup>
+
+<ItemGroup Label="Package references">
+  <PackageReference Include="Microsoft.SemanticKernel" />
+<!--
+  <PackageReference Include="Microsoft.Extensions.Configuration" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" />
+  <PackageReference Include="Microsoft.Extensions.Hosting" />
+  <PackageReference Include="Newtonsoft.Json" />
+  <PackageReference Include="StreamJsonRpc" />
+  <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+  <PackageReference Include="Microsoft.Extensions.Logging" />
+  <PackageReference Include="OpenTelemetry" />
+  <PackageReference Include="OpenTelemetry.Api" />
+  <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" />
+  -->
+</ItemGroup>
+
+  
   <ItemGroup>
     <ProjectReference Include="../Microsoft.SqlTools.Hosting/Microsoft.SqlTools.Hosting.csproj" />
     <ProjectReference Include="../Microsoft.SqlTools.Credentials/Microsoft.SqlTools.Credentials.csproj" />
