--- a/src/Microsoft.SqlTools.Credentials/Microsoft.SqlTools.Credentials.csproj
+++ b/src/Microsoft.SqlTools.Credentials/Microsoft.SqlTools.Credentials.csproj
@@ -24,14 +24,15 @@
         <Compile Include="**\*.cs" Exclude="**/obj/**/*.cs" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json"/>
         <PackageReference Include="Microsoft.Extensions.DependencyModel" />
-        <PackageReference Include="System.IO.Packaging"  />
-        <PackageReference Include="System.Runtime.Loader" />
+        <PackageReference Include="Newtonsoft.Json"/>
         <PackageReference Include="System.Composition" />
+        <PackageReference Include="System.IO.Packaging"  />
+        <PackageReference Include="System.Reactive.Core" />
+        <PackageReference Include="System.Runtime.Loader" />
         <PackageReference Include="System.Security.Permissions" />
         <PackageReference Include="System.Text.Encoding.CodePages"/>
-        <PackageReference Include="System.Reactive.Core" />
+        <PackageReference Include="System.Text.Json" />
     </ItemGroup>
     <ItemGroup>
         <InternalsVisibleTo Include="Microsoft.SqlTools.ServiceLayer.UnitTests" />
