--- a/src/Microsoft.SqlTools.Hosting/Microsoft.SqlTools.Hosting.csproj
+++ b/src/Microsoft.SqlTools.Hosting/Microsoft.SqlTools.Hosting.csproj
@@ -18,10 +18,11 @@
 		<Compile Include="**\*.cs" Exclude="**/obj/**/*.cs" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" />
 		<PackageReference Include="Microsoft.Extensions.DependencyModel" />
-		<PackageReference Include="System.Runtime.Loader" />
+		<PackageReference Include="Newtonsoft.Json" />
 		<PackageReference Include="System.Composition" />
+		<PackageReference Include="System.Runtime.Caching" />
+		<PackageReference Include="System.Runtime.Loader" />
 		<PackageReference Include="System.Text.Encodings.Web" />
 	</ItemGroup>
 	<ItemGroup>
