--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -38,6 +38,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="SqlCopilotCommon">
+      <HintPath>..\..\bin\ref\SqlCopilotCommon.dll</HintPath>
+    </Reference>
+    <Reference Include="SqlCopilotCartridges">
+      <HintPath>..\..\bin\ref\SqlCopilotCartridges.dll</HintPath>
+    </Reference>
+    
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
@@ -64,12 +74,34 @@
     </PackageReference>
     <PackageReference Include="TextCopy" />
   </ItemGroup>
+
+<ItemGroup Label="Package references">
+  <PackageReference Include="Microsoft.SemanticKernel" />
+<!--
+  <PackageReference Include="Microsoft.Extensions.Configuration" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" />
+  <PackageReference Include="Microsoft.Extensions.Hosting" />
+  <PackageReference Include="Newtonsoft.Json" />
+  <PackageReference Include="StreamJsonRpc" />
+  <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+  <PackageReference Include="Microsoft.Extensions.Logging" />
+  <PackageReference Include="OpenTelemetry" />
+  <PackageReference Include="OpenTelemetry.Api" />
+  <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" />
+  -->
+</ItemGroup>
+
+  
   <ItemGroup>
     <ProjectReference Include="../Microsoft.SqlTools.Hosting/Microsoft.SqlTools.Hosting.csproj" />
     <ProjectReference Include="../Microsoft.SqlTools.Credentials/Microsoft.SqlTools.Credentials.csproj" />
     <ProjectReference Include="../Microsoft.SqlTools.ManagedBatchParser/Microsoft.SqlTools.ManagedBatchParser.csproj" />
     <ProjectReference Include="../Microsoft.SqlTools.Authentication/Microsoft.SqlTools.Authentication.csproj" />
     <ProjectReference Include="../Microsoft.SqlTools.SqlCore/Microsoft.SqlTools.SqlCore.csproj" />
+    <ProjectReference Include="../Microsoft.SqlTools.Connectors.VSCode\Microsoft.SqlTools.Connectors.VSCode.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\Notice.txt">
